<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_serial_driver</name>
  <version>1.0.0</version>
  <description>RoboMaster serial driver.</description>
  <maintainer email="defateyz@gmail.com">Zheng Yu</maintainer>
  <license>Apache-2.0 License</license>
  <url type="website">https://github.com/FaterYU/rm_serial_driver</url>
  <url type="bugtracker">https://github.com/FaterYU/rm_serial_driver/issues</url>
  <author email="defateyz@gmail.com">Zheng Yu</author>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- depend: build, export, and execution dependency -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>serial_driver</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>auto_aim_interfaces</depend>
  <depend>buff_interfaces</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>message_filters</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
